@@ -21,6 +21,7 @@ sub htmlHeader { # %options->{ title, js, noindex, search }
     title $o{title};
     Link rel => 'shortcut icon', href => '/favicon.ico', type => 'image/x-icon';
     Link rel => 'stylesheet', href => $self->{url_static}.'/s/'.$skin.'/style.css?'.$self->{version}, type => 'text/css', media => 'all';
+    Link rel => 'search', type => 'application/opensearchdescription+xml', title => 'VNDB VN Search', href => $self->{url}.'/opensearch.xml';
     if($o{js}) {
       script type => 'text/javascript', src => $self->{url_static}.'/f/forms.js?'.$self->{version}; end;
     }
